@@ -9,6 +9,7 @@ v0.8.0
 * [BGBUILD-79] Allow to use BoxGrinder Build as a library
 * [BGBUILD-127] Use appliance definition object instead of a file when using BG as a library
 * [BGBUILD-72] Add support for growing (not pre-allocated) disks for KVM/Xen
+* [BGBUILD-147] Allow to list installed plugins and version information
 
 v0.7.1
 
